[package]
name = "lisp"
version = "0.0.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/MartinAskestad/LISP"
repository = "https://github.com/MartinAskestad/LISP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linefeed = { version = "0.6.0" }
regex = "1.9.3"

